# cosmic-ext-eyes

./: CHANGELOG.md  Cargo.toml  README.md  justfile
src/: eyes.rs  global_cursor.rs  main.rs  persist.rs
