[package]
name = "cosmic-ext-eyes"
version = "1.0.0"
edition = "2024"
license = "GPL-3.0"
authors = ["e.rollando <e.rollando@duck.com>"]


[dependencies]
cosmic = { package = "libcosmic", git = "https://github.com/pop-os/libcosmic", rev = "b0cbb54bf2b3528c895f7636c7ad1fd520fd2a9e", features = ["applet"] }
cosmic-client-toolkit = { git = "https://github.com/pop-os/cosmic-protocols", rev = "d0e95be25e423cfe523b11111a3666ed7aaf0dc4" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
